--- a/style.css
+++ b/style.css
@@ -167,6 +167,10 @@
       margin: auto;
   }
 
+  .section__container {
+      max-width: 1200px
+  }
+
   /* About */
   .about__majors {
       display: flex;
@@ -212,6 +216,11 @@
       width: 64px;
   }
 
+  .big__logo {
+      width: 44px;
+      margin: 0 10px;
+  }
+
   .edu__description {
       margin: 0 16px;
       text-align: left;
@@ -227,4 +236,62 @@
 
   .edu__period {
       font-size: var(--font-micro);
+  }
+
+  /* Skill */
+
+  #skills {
+      background-color: var(--color-yellow);
+      margin: auto;
+  }
+
+  .skillset {
+      display: flex;
+      background-color: var(--color-light-grey);
+      color: var(--color-light-white);
+      margin: 20px 0;
+  }
+
+  .skill__description {
+      display: flex;
+      justify-content: space-between;
+  }
+
+  .skillset__title {
+      color: var(--color-white);
+  }
+
+  .skillset__left {
+    flex-basis: 60%;
+    background-color: var(--color-dark-grey);
+    padding: 20px;
+  }
+
+  .skill {
+      margin-bottom: 28px;;
+  }
+
+  .skillset__right {
+      flex-basis: 40%;
+  }
+
+  .tools {
+    background-color: var(--color-grey);
+  }
+
+  .skill__bar {
+      width: 100%;
+      height: 3px;
+      background-color: var(--color-grey);
+  }
+
+  .skill__value {
+      width: 90%;
+      height: 3px;
+      background-color: var(--color-orange);
+  }
+
+  .tools,
+  .etc {
+      padding: 20px;
   }
