--- a/style.css
+++ b/style.css
@@ -127,6 +127,15 @@ font-weight: var(--weight-semi-bold);
     background-color: #6dc4a1;
 }
 
+.navbar__toggle-btn {
+    position: absolute;
+    top: 20px;
+    right: 32px;
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+}
+
 /* Home */
 #home {
     background-color: #C4EEDE;
@@ -460,4 +469,43 @@ background-color: var(--color-grey);
 
 .contact__links i:hover {
     transform: scale(1.1);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+        display: block;
+    }
+
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar__menu {
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .about__majors {
+        flex-direction: column;
+    }
+    .major {
+        margin-bottom: 38px;
+    }
+
+    .skillset {
+        flex-direction: column;
+    }
+
+    .project {
+        flex-grow: 1;
+    }
+
+    .testimonial__avatar {
+        width: 80px;
+        height: 80px;
+    }
 }
