--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@
     color: var(--color-white);
     padding: 16px;
     transition: all var(--anmiation-duration) ease-in-out;
+    z-index: 1;
 }
 #navbar.navbar--dark {
     background-color: #a8dbc7;
