--- a/style.css
+++ b/style.css
@@ -124,15 +124,13 @@ font-weight: var(--weight-semi-bold);
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    border: 1px solid transparent;
     border-radius: var(--size-border-radius);
-}
-
-.navbar__menu__item.active {
-    border: 1px solid var(--color-white);
 }
 
 .navbar__menu__item:hover {
     background-color: #6dc4a1;
+    border: 1px solid var(--color-white);
 }
 
 .navbar__toggle-btn {
@@ -346,13 +344,13 @@ background-color: var(--color-grey);
     padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-pink);
     color: var(--color-white);
 }
 
-.category__btn,active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top: 0;
