--- a/style.css
+++ b/style.css
@@ -426,18 +426,18 @@ background-color: var(--color-grey);
 }
 
 .project__description h3 {
-    color: var(--color-white);
+    color: var(--color-orange);
 }
 
 .project__description h3:after {
     content: '';
-    width: 25px;
+    width: 50px;
     height: 2px;
     background-color: var(--color-dark-white);
     display: block;
     position: relative;
     left: 50%;
-    margin-left: -12px;
+    transform: translateX(-50%);
     margin-top: 8px;
 }
 
@@ -518,6 +518,11 @@ background-color: var(--color-grey);
     #navbar {
         flex-direction: column;
         align-items: flex-start;
+        background-color: #a8dbc7;
+    }
+
+    #navbar.navbar--dark {
+        padding: 16px;
     }
 
     .navbar__menu {
@@ -525,6 +530,10 @@ background-color: var(--color-grey);
         text-align: center;
         width: 100%;
         display: none;
+    }
+
+    .navbar__menu.menu-on {
+        display: block;
     }
 
     .about__majors {
