--- a/style.css
+++ b/style.css
@@ -147,7 +147,10 @@ font-weight: var(--weight-semi-bold);
     background-color: #a8dbc7;
     color: var(--color-white);
     border-radius: 50%;
-    font-size: 40px;
+    width: 70px;
+    height: 70px;
+    font-size: 50px;
+    line-height: 70px;
     bottom: 64px;
     right: 32px;
     opacity: 0;
